codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__directory_tab_continues_explicit_path_completion.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Mentions                                                                                          "
"   All Results   Filesystem   Filesystem (All)   Plugins                                            "
"  /Applications/                                                                                    "
"› Applications  /                                                                             Dir   "
"  enter/tab insert · esc close · ↑/↓ select · ←/→ filter                                            "
"                                                                                                    "
"› @/Applications/                                                                                   "
"                                                                                                    "
"                                                                                 100% context left  "
