codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__explicit_path_file_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Mentions                                                                                          "
"   All Results   Filesystem   Filesystem (All)   Plugins                                            "
"  ../pd/ppd/file.txt                                                                                "
"› file.txt  ../pd/ppd/                                                                        File  "
"  enter/tab insert · esc close · ↑/↓ select · ←/→ filter                                            "
"                                                                                                    "
"› @../pd/ppd/file.txt                                                                               "
"                                                                                                    "
"                                                                                 100% context left  "
