codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__filesystem_all_unified_mention_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Mentions                                                                                          "
"   All Results   Filesystem   Filesystem (All)   Plugins                                            "
"  hidden-target                                                                                     "
"› .hidden-target  ignored/                                                                    File  "
"  enter/tab insert · esc close · ↑/↓ select · ←/→ filter                                            "
"                                                                                                    "
"› @hidden-target                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
