codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__home_json_file_popup_prioritizes_immediate_children.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Mentions                                                                                          "
"   All Results   Filesystem   Filesystem (All)   Plugins                                            "
"  ~/.json                                                                                           "
"› a-direct.json  ~/                                                                           File  "
"  enter/tab insert · esc close · ↑/↓ select · ←/→ filter                                            "
"                                                                                                    "
"› @~/.json                                                                                          "
"                                                                                                    "
"                                                                                 100% context left  "
